--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,44 @@
 language: python
 
+services:
+  - mongodb
+
+cache:
+  directories:
+    - $HOME/.cache/pip
+
 python:
   - 2.7
   - 3.4
+  - 3.5
+
+before_install:
+  # clone conda install/build/upload helper scripts and make them executable
+  - git clone https://github.com/NSLS-II/nsls2-ci ~/scripts
+  - chmod +x ~/scripts/*.sh
+  # install miniconda/anaconda-client/conda-build
+  - . ~/scripts/install-miniconda.sh
+  # - . ~/scripts/init-filestore.sh
 
 install:
+  - export GIT_FULL_HASH=`git rev-parse HEAD`
+  - conda update conda
+  - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION databroker numpy h5py coverage
+  - source activate testenv
+  - pip install codecov
+  - 'pip install https://github.com/NSLS-II/doct/zipball/master#egg=doct'
   - python setup.py install
-  - pip install coveralls six
+  # Need to clean the python build directory (and other cruft) or pytest is
+  # going to find the build directory and get confused why there are two sets
+  # of every test file
+  - git clean -xfd
+
 
 script:
-  - python run_tests.py
+  - coverage run run_tests.py
 
 after_success:
-  coveralls
+  - codecov
+
+after_failure:
+  - . ~/scripts/debug.sh
