--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
   # install miniconda/anaconda-client/conda-build
   - . ~/scripts/install-miniconda.sh
   - . ~/scripts/init-metadatastore.sh
+  - . ~/scripts/init-filestore.sh
 
 install:
   - export GIT_FULL_HASH=`git rev-parse HEAD`
@@ -26,7 +27,6 @@ install:
   - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION databroker numpy h5py coverage
   - source activate testenv
   - pip install codecov
-  - 'pip install https://github.com/NSLS-II/doct/zipball/master#egg=doct'
   - python setup.py install
   # Need to clean the python build directory (and other cruft) or pytest is
   # going to find the build directory and get confused why there are two sets
