CI: Remove conda-forge from the condarc
CI: The command is --force, not --yes

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,9 @@ before_install:
   - chmod +x ~/scripts/*.sh
   # install miniconda/anaconda-client/conda-build
   - . ~/scripts/install-miniconda.sh
+  # remove conda-forge because h5py and hdf5 are broken packages. gzip does not work
+  # if I use the packages from the conda-forge channel
+  - conda config --remove channels conda-forge --force
   - . ~/scripts/init-metadatastore.sh
   - . ~/scripts/init-filestore.sh
 
