--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,11 @@ before_install:
 install:
   - export GIT_FULL_HASH=`git rev-parse HEAD`
   - conda update conda
-  - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION databroker numpy h5py coverage event-model bluesky doct jinja2 pandas
+  - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION databroker numpy h5py coverage event-model doct jinja2 pandas
   - source activate testenv
+  - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then
+      conda install bluesky;
+    fi;
   # add the --force flag so that conda >4 doesn't remove the pacakges that
   # depend on metadatastore
   - conda remove metadatastore --force
