--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ language: python
 services:
   - mongodb
 
+addons:
+  apt:
+    sources:
+    - mongodb-3.2-precise
+    packages:
+    - mongodb-org-server
+
 cache:
   directories:
     - $HOME/.cache/pip
