--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ python:
   - 3.5
 
 before_install:
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
+  - "export DISPLAY=:99.0"
   # clone conda install/build/upload helper scripts and make them executable
   - git clone https://github.com/NSLS-II/nsls2-ci ~/scripts
   - chmod +x ~/scripts/*.sh
