--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ before_install:
   - . ~/scripts/install-miniconda.sh
   # remove conda-forge because h5py and hdf5 are broken packages. gzip does not work
   # if I use the packages from the conda-forge channel
-  - conda config --remove channels conda-forge --force
+  #- conda config --remove channels conda-forge --force
   - . ~/scripts/init-metadatastore.sh
   - . ~/scripts/init-filestore.sh
 
