--- a/.travis.yml
+++ b/.travis.yml
@@ -43,7 +43,7 @@ install:
   - conda create -n testenv pip pytest python=$TRAVIS_PYTHON_VERSION databroker numpy h5py coverage event-model doct jinja2 pandas prettytable
   - source activate testenv
   - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then
-      conda install bluesky;
+      conda install bluesky -c lightsource2-tag;
     else
       pip install singledispatch;
     fi;
