--- a/.travis.yml
+++ b/.travis.yml
@@ -74,3 +74,12 @@ script:
 
 after_success:
   - codecov
+  - |
+    if [[ $TRAVIS_PULL_REQUEST == false && $TRAVIS_REPO_SLUG == 'NSLS-II/suitcase' && $BUILD_DOCS == true && $TRAVIS_BRANCH == 'master' ]]; then
+      echo "Adding encrypted deployment key for uploading docs"
+      openssl aes-256-cbc -K $encrypted_5e70d93e51c3_key -iv $encrypted_5e70d93e51c3_iv -in deploy_key_suitcase.enc -out deploy_key_suitcase -d
+      eval `ssh-agent -s`
+      chmod 600 deploy_key_suitcase
+      ssh-add deploy_key_suitcase
+      source ~/ci_scripts/push-docs.sh
+    fi
