DEV: need ophyd in -dev version for bug fix in timestamps

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ install:
   - source activate testenv
   - if [[ $TRAVIS_PYTHON_VERSION != "2.7" ]]; then
       conda install databroker bluesky -c lightsource2-tag;
+      conda update ophyd -c lightsource2-dev;
     else
       pip install singledispatch;
       conda install databroker -c lightsource2-tag;
