--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,6 @@
-
-# See the docstring in versioneer.py for instructions. Note that you must
-# re-run 'versioneer.py setup' after changing this section, and commit the
-# resulting files.
-
 [versioneer]
 VCS = git
-style = pep440
+style = pep440-post
 versionfile_source = suitcase/_version.py
 versionfile_build = suitcase/_version.py
 tag_prefix = v
